# Play_C-C-

./: .gitignore  README.md
cert_toy/: CMakeLists.txt  README.md  generate_cert.cpp  generate_pk.cpp  generate_sign.cpp  verify_sign.cpp
chatting/: CMakeLists.txt  README.md  comm.txt
chatting/client/: CMakeLists.txt  client.cpp
chatting/server/: server.cpp
cpu_monitoring/: README.md  avg_cpu_load.py  output.txt
firstpj/: README.md  db.sqlite3  manage.py
firstpj/firstpj/: asgi.py  settings.py  urls.py  wsgi.py
firstpj/myapp/: models.py  serializers.py  services.py  urls.py  views.py
firstpj/myapp/migrations/: 0001_initial.py
grpc_tutorial_cpp/: CMakeLists.txt  README.md  client.cpp  server.cpp  test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h  test.proto
json_work/: README.md  command.txt  read  read_json.cpp  temp.json
message_queue/: go.mod  go.sum  main.go  test_code.go
message_queue/client/: main.go
message_queue/client/file/: example.txt
mobis_performance_test_code/: CMakeLists.txt  README.md  client.cpp  dockerfile
mobis_performance_test_code/script/: run.sh  stop.sh
mobis_performance_test_code/src/: client.cpp  server.cpp
py_scripts/: README.md  thor_build.py
rust/: README.md
rust/someip_rust/: Cargo.toml  README.md
rust/someip_rust/src/: main.rs
rust/start_rust/: Cargo.toml  README.md  command.txt
rust/start_rust/src/: main.rs
socket_programing/: README.md
string_to_octetString/: README.md
